# miniMLinterpreter

./: .gitignore  .merlin  README.md  main.ml
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/.aliases/default/: install-00000000000000000000000000000000
_build/.aliases/default/test/: runtest-00000000000000000000000000000000
_build/default/: README.md  main.ml  miniml.dune-package  miniml.install
_build/default/.main.eobjs/byte/: main.cmi  main.cmo  main.cmt
_build/default/.main.eobjs/native/: main.cmx
_build/default/src/: .merlin  cui.ml  lexer.ml  lexer.mll  miniml.cmxa  parser.ml  parser__mock.ml.mock
_build/default/test/: ex3_2_1.ml  ex3_2_3.ml  ex3_2_4.ml  ex3_5_1.ml  ex3_5_2.ml  ex3_6_1.ml  ex3_6_2.ml  ex3_6_3.ml  ex3_6_4.ml  ex3_6_5.ml  ex4_2_1.ml  ex4_3_3.ml  ex4_3_7.ml  ex4_4_2.ml  ex4_4_3.ml  oUnit-anon.cache  tyLexer.ml  tyParser.ml  tyParser.mli  tyParser__mock.ml.mock  tyParser__mock.mli.inferred  tySyntax.ml  typingTestGenerator.ml
_build/default/test/.ex3_2_1.eobjs/: evalTestGenerator.ml.all-deps  evalTestGenerator.ml.d  ex3_2_1.ml.d  ex3_2_2.ml.d  ex3_2_3.ml.d  ex3_2_4.ml.d  ex3_3_1.ml.d  ex3_3_2.ml.d  ex3_3_3.ml.d  ex3_3_4.ml.d  ex3_4_1.ml.d  ex3_4_2.ml.d  (+45 more)
src/: cui.ml  eval.ml  lexer.mll  parser.mly  syntax.ml  typing.ml
test/: .merlin  dune  evalTestGenerator.ml  ex3_3_1.ml  ex3_3_2.ml  ex3_3_4.ml  ex3_4_1.ml  ex3_4_2.ml  ex3_4_3.ml  ex3_4_5.ml  ex4_3_1.ml  ex4_3_2.ml  ex4_3_5.ml  ex4_3_6.ml  ex4_4_1.ml  exec.ml  lexingHelper.ml  pretypingTestGenerator.ml  testutil.ml  tyHelper.ml  tyLexer.mll  tyParser.mly
(+56 files in other folders)
